--- a/index.html
+++ b/index.html
@@ -1,17 +1,53 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <title>Example</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `link` tags-->
-      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<head>
+  <title>Serve-A-Hero</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `script` tags-->
-      <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
-      <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
-    </head>
-    <body>
-      <h1>Browser Template</h1>
-    </body>
+  <!-- Do not add `link` tags-->
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Do not add `script` tags-->
+  <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
+  <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
+</head>
+
+<body>
+  <header>
+    Serve-A-Hero
+  </header>
+  <section>
+    <form id='sign-up'>
+      <h2>Sign Up</h2>
+      <input name="credentials[email]" type="email" placeholder="email">
+      <input name="credentials[password]" type="password" placeholder="password">
+      <input name="credentials[password_confirmation]" type="password" placeholder="password confirmation">
+      <button class="btn btn-primary">Sign Up</button>
+    </form>
+  </section>
+  <section>
+    <form id='sign-in'>
+      <h2>Sign In</h2>
+      <input name="credentials[email]" type="email" placeholder="email">
+      <input name="credentials[password]" type="password" placeholder="password">
+      <button class="btn btn-primary">Sign In</button>
+    </form>
+    <br>
+  </section>
+  <form id="sign-out">
+    <button class="btn btn-primary">Sign out</button>
+  </form>
+  <section id="change-password">
+    <form>
+      <h2>Change Password</h2>
+      <input type="password" name="passwords[old]" placeholder="Old Password">
+      <input type="password" name="passwords[new]" placeholder="New Password">
+      <br>
+      <button class="btn btn-primary">Change Password</button>
+    </form>
+  </section>
+  <h2 id="message"></h2>
+</body>
+
 </html>
