Add create curl script and forms to create resource from client
Added api request for create + event-listeners/handlers

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
     </form>
   </section>
   <h2 id="message"></h2>
+  <form id='create-hero'>
+    <h2>Create Your Hero!</h2>
+    <input name="hero[name]" type="text" placeholder="name">
+    <input name="hero[location]" type="text" placeholder="location">
+    <input name="hero[universe]" type="text" placeholder="universe">
+    <button class="btn btn-primary">create</button>
+  </form>
 </body>
 
 </html>
