--- a/index.html
+++ b/index.html
@@ -53,8 +53,17 @@
     <input name="hero[name]" type="text" placeholder="name">
     <input name="hero[location]" type="text" placeholder="location">
     <input name="hero[universe]" type="text" placeholder="universe">
-    <button class="btn btn-primary">create</button>
+    <button class="btn btn-primary">Create Hero</button>
   </form>
+  <button id="get-hero" class="btn btn-primary">Get Heroes</button>
+  <form id='update-hero'>
+    <input name="hero[name]" type="text" placeholder="Name">
+    <input name="hero[location]" type="text" placeholder="Location">
+    <input name="hero[universe]" type="text" placeholder="Universe">
+    <input name="hero[id]" type="text" placeholder="ID">
+    <button class="btn btn-primary">Update</button>
+  </form>
+  <div id="content" class="content"></div>
 </body>
 
 </html>
