--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header>
     Serve-A-Hero
   </header>
-  <button id='login' type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Sign-Up/Login</button>
+  <button id='login' type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"> Sign-Up/Login </button>
   <div id="myModal" class="modal fade" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -40,16 +40,16 @@
     </form>
     <br>
   </section>
-  <section id="change-password">
-    <form>
+  <section>
+    <form id="change-password">
       <h2>Change Password</h2>
       <input type="password" name="passwords[old]" placeholder="Old Password">
       <input type="password" name="passwords[new]" placeholder="New Password">
       <br>
       <button class="btn btn-primary">Change Password</button>
-      <form id="sign-out">
-        <button class="btn btn-primary">Sign out</button>
-      </form>
+    </form>
+    <form id="sign-out">
+      <button class="btn btn-primary">Sign out</button>
     </form>
   </section>
   <div>
