--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </form>
   </section>
   <div>
-      <button type="button" class="close" data-dismiss="modal">Close</button>
+      <button type="button" class="close" data-dismiss="modal">&times;</button>
     </div>
 </div>
 </div>
@@ -61,9 +61,9 @@
   <h2 id="message"></h2>
   <form id='create-hero'>
     <h2>Create Your Hero!</h2>
-    <input name="hero[name]" type="text" placeholder="name">
-    <input name="hero[location]" type="text" placeholder="location">
-    <input name="hero[universe]" type="text" placeholder="universe">
+    <input name="hero[name]" type="text" placeholder="Name">
+    <input name="hero[location]" type="text" placeholder="Location">
+    <input name="hero[universe]" type="text" placeholder="Universe">
     <button class="btn btn-primary">Create Hero</button>
   </form>
   <form id='update-hero'>
@@ -73,8 +73,8 @@
     <input name="hero[id]" type="text" placeholder="ID">
     <button class="btn btn-primary">Update</button>
     <br>
-    <button id="get-hero" class="btn btn-primary">Get Heroes</button>
   </form>
+  <button id="get-hero" class="btn btn-primary">Get Heroes</button>
   <h3 id="heros"></h3>
   <div id="content" class="content"></div>
 </body>
