--- a/index.html
+++ b/index.html
@@ -77,6 +77,24 @@
   <button id="get-hero" class="btn btn-primary">Get Heroes</button>
   <h3 id="heros"></h3>
   <div id="content" class="content"></div>
+  <form id='create-villain'>
+    <h2>Create Your Villain!</h2>
+    <input name="villain[name]" type="text" placeholder="Name">
+    <input name="villain[location]" type="text" placeholder="Location">
+    <input name="villain[universe]" type="text" placeholder="Universe">
+    <button class="btn btn-primary">Create Villain</button>
+  </form>
+  <form id='update-villain'>
+    <input name="villain[name]" type="text" placeholder="Name">
+    <input name="villain[location]" type="text" placeholder="Location">
+    <input name="villain[universe]" type="text" placeholder="Universe">
+    <input name="villain[id]" type="text" placeholder="ID">
+    <button class="btn btn-primary">Update</button>
+    <br>
+  </form>
+  <button id="get-villain" class="btn btn-primary">Get Villains</button>
+  <h3 id="villains"></h3>
+  <div id="villain-content" class="villain-content"></div>
 </body>
 
 </html>
