--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Serve-A-Hero</title>
+  <title>Heroes And Villains</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Do not add `link` tags-->
@@ -16,7 +16,7 @@
 
 <body>
   <header>
-    Serve-A-Hero
+    Choose Your Side: Heroes and Villains!
   </header>
   <button id='login' type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"> Sign-Up/Login </button>
   <div id="myModal" class="modal fade" role="dialog">
